--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /*
 1. Posicionamiento
 2. Modelo de caja (Box model)
@@ -6,9 +5,9 @@
 4. Visuales
 5. Otros
 */
-:root{
+:root {
     /*Colores*/
-    --bitcoin-orange:#f7931a;
+    --bitcoin-orange: #f7931a;
     --soft-orange: #ffe9d5;
     --secondary-blue: #1a9af7;
     --soft-blue: #e7f5ff;
@@ -18,17 +17,19 @@
     --off-white: #FAF8F7;
     --just-white: #fff;
 }
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-html{
+
+html {
     font-size: 62.5%;
     font-family: 'DM Sans', sans-serif;
 }
 
-header{
+header {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -40,13 +41,14 @@ header{
     background: linear-gradient(207.8deg, #201e1c 16.69%, #f7931a 100%);
 }
 
-header img{
+header img {
     width: 150px;
     height: 24px;
     margin-top: 60px;
     align-self: center;
 }
-.header--title-container{
+
+.header--title-container {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
@@ -55,13 +57,15 @@ header img{
     text-align: center;
     align-self: center;
 }
-.header--title-container h1{
+
+.header--title-container h1 {
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
 }
-.header--title-container p{
+
+.header--title-container p {
     margin-top: 25px;
     font-size: 1.4rem;
     font-weight: 500;
@@ -69,13 +73,13 @@ header img{
     color: var(--soft-orange);
 }
 
-.header--title-container .header--button{
+.header--title-container .header--button {
     position: absolute;
     top: 270px;
     display: block;
     margin-top: 35px;
     padding: 15px;
-    width: 229px; 
+    width: 229px;
     height: 48px;
     background-color: var(--off-white);
     box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
@@ -87,32 +91,37 @@ header img{
     color: var(--black);
     left: calc(50% - 118px);
 }
-.header--button span{
+
+.header--button span {
     display: inline-block;
     width: 13px;
     height: 8px;
     margin-left: 10px;
     background-image: url("./assets/icons/down-arrow.svg");
 }
-.main{
+
+.main {
     width: 100%;
     height: auto;
     background-color: var(--off-white);
 }
-.main-exchange-container{
+
+.main-exchange-container {
     width: 100%;
     height: auto;
     padding-top: 80px;
     padding-bottom: 30px;
     text-align: center;
 }
-.main-exchange-container--title{
+
+.main-exchange-container--title {
     width: 90%;
     min-width: 288px;
     max-width: 900px;
     margin: 0 auto;
 }
-.main-exchange-container .backgroundImg{
+
+.main-exchange-container .backgroundImg {
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -122,7 +131,8 @@ header img{
     background-position: center;
     background-size: cover;
 }
-.main-exchange-container h2{
+
+.main-exchange-container h2 {
     margin-bottom: 30px;
     font-size: 2.4rem;
     font-weight: bold;
@@ -130,7 +140,8 @@ header img{
     line-height: 2.6rem;
     color: var(--black);
 }
-.main-exchange-container p{
+
+.main-exchange-container p {
     margin-bottom: 30px;
     font-size: 1.4rem;
     font-weight: 500;
@@ -138,7 +149,7 @@ header img{
     color: #757575;
 }
 
-.main-currency-table{
+.main-currency-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
@@ -147,14 +158,15 @@ header img{
     font-family: "Inter", sans-serif;
 }
 
-.main-currency-table .currency-table--title{
+.main-currency-table .currency-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
     color: var(--bitcoin-orange);
 }
-.currency-table--container{
+
+.currency-table--container {
     width: 90%;
     min-width: 230px;
     max-width: 300px;
@@ -162,11 +174,12 @@ header img{
     margin: 0 auto;
 }
 
-.currency-table--container table{
+.currency-table--container table {
     width: 100%;
     height: 100%;
 }
-.currency-table--container td{
+
+.currency-table--container td {
     width: 50%;
     font-size: 1.6rem;
     font-weight: 500;
@@ -174,26 +187,31 @@ header img{
     color: var(--grey);
     background-color: var(--just-white);
 }
-.currency-table--container .table__top-left{
+
+.currency-table--container .table__top-left {
     border-radius: 15px 0 0 0;
 }
-.currency-table--container .table__top-right{
+
+.currency-table--container .table__top-right {
     border-radius: 0 15px 0 0;
 }
-.currency-table--container .table__bottom-left{
+
+.currency-table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
 }
-.currency-table--container .table__bottom-right{
+
+.currency-table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
-.currency-table--container .table__right{
+
+.currency-table--container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
     color: #757575;
 }
 
-.currency-table--container .down{
+.currency-table--container .down {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -203,7 +221,8 @@ header img{
     background-position: center;
     background-repeat: no-repeat;
 }
-.currency-table--container .up{
+
+.currency-table--container .up {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -211,9 +230,10 @@ header img{
     background-image: url("./assets/icons/trending-up.svg");
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat ;
+    background-repeat: no-repeat;
 }
-.currency-table--container .right-arrow{
+
+.currency-table--container .right-arrow {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -224,7 +244,7 @@ header img{
     background-repeat: no-repeat;
 }
 
-.currency-table--date{
+.currency-table--date {
     width: 190px;
     height: 30px;
     margin: 0 auto;
@@ -233,17 +253,20 @@ header img{
     background-color: var(--soft-orange);
     border-radius: 8px;
 }
-.currency-table--date p{
+
+.currency-table--date p {
     margin: 2px;
     font-size: 1.2rem;
     line-height: 1.5rem;
     color: var(--warm-black);
     font-weight: 300;
 }
-.currency-table--container table{
+
+.currency-table--container table {
     margin-bottom: 5rem;
 }
-.currency-table--date-comisiones{
+
+.currency-table--date-comisiones {
     width: 190px;
     height: 30px;
     margin: 0 auto;
@@ -252,22 +275,24 @@ header img{
     border-radius: 8px;
     padding: 8px;
 }
-.currency-table--date-comisiones p{
-    
+
+.currency-table--date-comisiones p {
+
     font-size: 1.2rem;
     line-height: 1.5rem;
     color: var(--warm-black);
     font-weight: 300;
 }
-.main-currency-table .currency-table--title-comisiones{
-     margin: 3rem auto;
+
+.main-currency-table .currency-table--title-comisiones {
+    margin: 3rem auto;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
     color: var(--secondary-blue);
 }
 
-.main-product-detail{
+.main-product-detail {
     position: relative;
     width: 100%;
     min-width: 320px;
@@ -275,7 +300,8 @@ header img{
     padding: 20px 10px;
     background-color: var(--warm-black);
 }
-.product-detail--batata-logo{
+
+.product-detail--batata-logo {
     position: absolute;
     width: 40px;
     height: 25px;
@@ -283,7 +309,8 @@ header img{
     left: calc(50% - 20px);
     background-image: url("./assets/icons/batata.svg");
 }
-.product-detail--title{
+
+.product-detail--title {
     width: 90%;
     min-width: 288px;
     height: auto;
@@ -291,14 +318,16 @@ header img{
     margin-top: 50px;
     text-align: center;
 }
-.product-detail--title h2{
+
+.product-detail--title h2 {
     margin-bottom: 20px;
     font-size: 2.4rem;
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white);
 }
-.product-detail--title p{
+
+.product-detail--title p {
     margin-bottom: 20px;
     font-size: 1.4rem;
     font-weight: 500;
@@ -306,7 +335,7 @@ header img{
     color: #808080;
 }
 
-.product-detail--card{
+.product-detail--card {
     width: 90%;
     min-width: 288px;
     max-width: 400px;
@@ -317,17 +346,50 @@ header img{
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
-.product-detail--card .clock{
+
+.product-detail--card .clock {
     display: inline-block;
     width: 20px;
     height: 20px;
     margin-bottom: 10px;
-    background-image:url("./assets/icons/clock.svg");
+    background-image: url("./assets/icons/clock.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.product--card-title{
+
+.product-detail--card .eye {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url("./assets/icons/eye.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .dollar {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url("./assets/icons/dollar-sign.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .check {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url("./assets/icons/check-circle.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product--card-title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
@@ -335,7 +397,7 @@ header img{
     color: var(--just-white);
 }
 
-.product--card-body{
+.product--card-body {
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
